--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tributo a Mana</title>
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital@1&display=swap" rel="stylesheet">
 </head>
 <header><!--Cabezera del tributo-->
-    <h1>Mana</h1>
+    <h1 >Mana</h1>
     </h1><br>
     <p>El cuarteto Maná es uno de los pilares básicos del rock mexicano y, por extensión, del rock latino. </p>
 
@@ -15,9 +16,13 @@
 <body>
     
     
-    <section>
+    <section >
+        <article></article>
+        <article id="bloque_imagen">
          <img src="img/imgprincipal.jpg" alt="imagendelabanda">
          <p>Los orígenes de Maná se remontan a un grupo musical llamado Sombrero Verde, cuyos integrantes Fher Olvera, como voz, Gustavo Orozco, a la guitarra eléctrica, y los hermanos Calleros, Juan, al bajo, Ulises, a la guitarra eléctrica y Abraham, a la batería, eran originarios de Guadalajara.</p>
+        </article>
+        <article></article>
     </section><!--seccion de imagen-->
 
     <section><!--cuerpo del texot-->
