modificacion de la img

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header><!--Cabezera del tributo-->
         <h1>Mana</h1>
-        <p>El cuarteto Maná es uno de los pilares básicos del rock mexicano y, por extensión, del rock latino. </p>
+        <p id= "parrafoinicial">El cuarteto Maná es uno de los pilares básicos del rock mexicano y, por extensión, del rock latino. </p>
     
     </header>
     
