--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header><!--Cabezera del tributo-->
-        <h1>Mana</h1>
+        <h1>Maná</h1>
         <p class="frases_puntuales">El cuarteto Maná es uno de los pilares básicos del rock mexicano y, por extensión, del rock latino. </p>
     
     </header>
@@ -49,7 +49,7 @@
                 <li>Este es el noveno álbum de estudio (y décimo primero en general) de la banda.13​ Fue lanzado a la venta el 21 de abril de 2015.14​ El primer sencillo fue Mi verdad que cuenta con la colaboración de la cantante colombiana Shakira, el segundo sencillo fue La prisión, tema del cual el 24 de julio de 2015, salió una versión de electrónica con el Dj estadounidense Steve Aoki, rompiendo por completo con los esquemas musicales que nos tenía acostumbrado la banda. El tercer sencillo del disco es el tema Ironía, cuyo video oficial fue estrenado el 12 de octubre.</li><br>
             </ul>
 
-            <p class="frases_puntuales">Y aunque  me implores y me llores jamas yo volvere</p>
+            <p class="frases_puntuales">Y aunque  me implores y me llores jamas yo volveré</p>
         
          </section>
          <section id="derecha">
